--- a/TowerDefenseGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TowerDefenseGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -97,8 +97,11 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
+[MRU]
+MRUItem0=/Game/Maps/MainLevel1
+
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/OpenWorld
+LastLevel=/Game/Maps/MainLevel1
 
 [ModuleFileTracking]
 TowerDefenseGame.TimeStamp=2023.05.21-18.53.43
@@ -111,4 +114,31 @@ Object="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+
+[ContentBrowser]
+AssetDialog.ThumbnailSize=2
+AssetDialog.CurrentViewType=1
+ContentBrowserDrawer.SourcesExpanded=True
+ContentBrowserDrawer.FavoritesAreaExpanded=False
+ContentBrowserDrawer.PathAreaExpanded=True
+ContentBrowserDrawer.CollectionAreaExpanded=False
+ContentBrowserDrawer.FavoritesSearchAreaExpanded=False
+ContentBrowserDrawer.PathSearchAreaExpanded=False
+ContentBrowserDrawer.CollectionSearchAreaExpanded=False
+ContentBrowserDrawer.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
+ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserDrawer.SelectedPaths=/Game/Maps
+ContentBrowserDrawer.PluginFilters=
+ContentBrowserDrawer.Favorites.SelectedPaths=
+FavoritePaths=
+ContentBrowserDrawer.SelectedCollections=
+ContentBrowserDrawer.ExpandedCollections=
+ContentBrowserDrawer.ThumbnailSize=2
+ContentBrowserDrawer.CurrentViewType=1
+
+[PathColor]
+/Game/Maps=(R=0.069875,G=0.467784,B=0.000000,A=1.000000)
 
