--- a/TowerDefenseGame/TowerDefenseGame.uproject
+++ b/TowerDefenseGame/TowerDefenseGame.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "TowerDefenseGame",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
