--- a/TowerDefenseGame/Config/DefaultGame.ini
+++ b/TowerDefenseGame/Config/DefaultGame.ini
@@ -1,3 +1,5 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=B0F85A4441BB01E2A34B498AC5524F2D
+CopyrightNotice="© 2023 Gazda-dev "
+
