--- a/TowerDefenseGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TowerDefenseGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -162,10 +162,10 @@ bPreloadProjectModules=True
 bPreloadProjectPluginModules=True
 
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/OpenWorld
+LastLevel=/Game/Maps/MainLevel1
 
 [ModuleFileTracking]
-TowerDefenseGame.TimeStamp=2023.05.21-19.45.49
+TowerDefenseGame.TimeStamp=2023.05.21-21.31.30
 TowerDefenseGame.LastCompileMethod=External
 StorageServerClient.TimeStamp=2023.02.18-15.57.57
 StorageServerClient.LastCompileMethod=Unknown
@@ -1163,14 +1163,16 @@ GeometryProcessingInterfaces.TimeStamp=2023.02.18-15.56.50
 GeometryProcessingInterfaces.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2023.02.18-15.56.52
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+NullDrv.TimeStamp=2023.02.18-15.57.20
+NullDrv.LastCompileMethod=Unknown
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object=
+Object="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -1540,4 +1542,7 @@ WmfMediaSettings.Debug=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
+
+[ContentBrowserRecent]
+MRUItem0=/Game/Maps/MainLevel1
 
