--- a/TowerDefenseGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TowerDefenseGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -155,8 +155,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/Maps/MainLevel1
 
 [ModuleFileTracking]
-TowerDefenseGame.TimeStamp=2023.05.21-22.20.18
-TowerDefenseGame.LastCompileMethod=Unknown
+TowerDefenseGame.TimeStamp=2023.05.22-21.01.18
+TowerDefenseGame.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2023.02.18-15.57.57
 StorageServerClient.LastCompileMethod=Unknown
 CookOnTheFly.TimeStamp=2023.02.18-15.56.05
@@ -1188,4 +1188,33 @@ Project=D:/Gry/fortnite/unreal/UE_5.1/
 [Python]
 LastDirectory=
 RecentsFiles=D:/Gry/fortnite/unreal/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[/Script/LiveCoding.LiveCodingSettings]
+bEnabled=False
+bPreloadEngineModules=False
+bPreloadEnginePluginModules=False
+bPreloadProjectModules=True
+bPreloadProjectPluginModules=True
+
+[ContentBrowser]
+ContentBrowserDrawer.SourcesExpanded=True
+ContentBrowserDrawer.FavoritesAreaExpanded=False
+ContentBrowserDrawer.PathAreaExpanded=True
+ContentBrowserDrawer.CollectionAreaExpanded=False
+ContentBrowserDrawer.FavoritesSearchAreaExpanded=False
+ContentBrowserDrawer.PathSearchAreaExpanded=False
+ContentBrowserDrawer.CollectionSearchAreaExpanded=False
+ContentBrowserDrawer.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
+ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserDrawer.SelectedPaths=/Classes_Game/TowerDefenseGame/Public/Player
+ContentBrowserDrawer.PluginFilters=
+ContentBrowserDrawer.Favorites.SelectedPaths=
+FavoritePaths=
+ContentBrowserDrawer.SelectedCollections=
+ContentBrowserDrawer.ExpandedCollections=
+ContentBrowserDrawer.ThumbnailSize=2
+ContentBrowserDrawer.CurrentViewType=1
 
