--- a/TowerDefenseGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TowerDefenseGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -155,7 +155,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/Maps/MainLevel1
 
 [ModuleFileTracking]
-TowerDefenseGame.TimeStamp=2023.05.23-09.55.54
+TowerDefenseGame.TimeStamp=2023.05.23-11.24.52
 TowerDefenseGame.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2023.02.18-15.57.57
 StorageServerClient.LastCompileMethod=Unknown
@@ -1155,9 +1155,11 @@ Voice.TimeStamp=2023.02.18-15.58.17
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2023.02.18-15.57.14
 MovieSceneCapture.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2023.02.18-15.56.45
+ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Blueprints/Player/BP_PlayerCameraPawn.BP_PlayerCameraPawn
 OpenAssetsAtExit=/Game/Blueprints/BP_TowerDefenseGameGameModeBase.BP_TowerDefenseGameGameModeBase
@@ -1359,6 +1361,7 @@ TcpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.Inpu
 TemplateSequenceEditorSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,
 UdpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,
 WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/Player/BP_MyPlayerController
@@ -2025,6 +2028,23 @@ AndroidRuntimeSettings.AdvancedBuild=True
 AudioSettings.Panning=True
 Engine.PerQualityLevelProperty=True
 AndroidRuntimeSettings.Project SDK Override=True
+WorldSettings.GameMode=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.Lightmass=True
+WorldSettings.World=True
+WorldSettings.Physics=True
+WorldSettings.Broadphase=True
+WorldSettings.HLODSystem=True
+WorldSettings.WorldPartitionSetup=True
+WorldSettings.Foliage=True
+WorldSettings.Landscape=True
+WorldSettings.Navigation=True
+WorldSettings.VR=True
+WorldSettings.Rendering=True
+WorldSettings.Audio=True
+WorldSettings.Tick=True
+WorldSettings.Networking=True
+BP_MyPlayerController_C.Cooking=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -2052,17 +2072,17 @@ CrowdManager="\"Object.Config.AvoidanceConfig\" \"Object.Config.AvoidanceConfig.
 CrowdManagerBase="\"Object.Config.AvoidanceConfig\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[0]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[1]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[2]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[3]\" "
 EnhancedInputDeveloperSettings="\"Object.Enhanced Input.PlatformSettings\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[0].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[1].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[2].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[3].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[4].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[5].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[6].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[7].Object.Default\" "
 DeveloperSettingsBackedByCVars="\"Object.Enhanced Input.PlatformSettings\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[0].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[1].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[2].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[3].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[4].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[5].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[6].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[7].Object.Default\" "
-InputModifierDeadZone=
+InputModifierDeadZone="\"Object\" "
 InputModifier=
-InputTriggerDown=
-InputTrigger=
-InputTriggerPressed=
-InputTriggerReleased=
-InputTriggerHold=
-InputTriggerTimedBase=
-InputTriggerHoldAndRelease=
-InputTriggerTap=
-InputTriggerPulse=
+InputTriggerDown="\"Object\" "
+InputTrigger="\"Object\" "
+InputTriggerPressed="\"Object\" "
+InputTriggerReleased="\"Object\" "
+InputTriggerHold="\"Object\" "
+InputTriggerTimedBase="\"Object\" "
+InputTriggerHoldAndRelease="\"Object\" "
+InputTriggerTap="\"Object\" "
+InputTriggerPulse="\"Object\" "
 RecastNavMesh="\"Object.Display.TileGenerationDebug\" "
 NavigationData="\"Object.Display.TileGenerationDebug\" "
 PhysicsSettings="\"Object.Replication.PhysicErrorCorrection\" \"Object.ChaosPhysics.ChaosSettings\" \"Object.ChaosPhysics.SolverOptions\" \"Object.ChaosPhysics.SolverOptions.CollisionFilterSettings\" \"Object.ChaosPhysics.SolverOptions.BreakingFilterSettings\" \"Object.ChaosPhysics.SolverOptions.TrailingFilterSettings\" "
@@ -2077,6 +2097,10 @@ ModelingToolsEditorModeSettings="\"Object.Modeling Mode.Modeling Mode|Generated 
 InputModifierResponseCurveExponential="\"Object\" "
 UserInterfaceSettings="\"Object.DPI Scaling.UIScaleCurve\" "
 LinuxTargetSettings="\"Object.Audio.Audio|CookOverrides\" "
+BP_MyPlayerController_C="\"Object.MouseInterface.ClickEventKeys\" \"Object.Game.Game|Feedback\" \"Object.Controller.Controller|Transform\" \"Object.Replication.ReplicatedMovement\" "
+MyPlayerController="\"Object.MouseInterface.ClickEventKeys\" \"Object.Game.Game|Feedback\" \"Object.Controller.Controller|Transform\" \"Object.Replication.ReplicatedMovement\" "
+PlayerController="\"Object.MouseInterface.ClickEventKeys\" \"Object.Game.Game|Feedback\" \"Object.Controller.Controller|Transform\" \"Object.Replication.ReplicatedMovement\" "
+Controller="\"Object.MouseInterface.ClickEventKeys\" \"Object.Game.Game|Feedback\" \"Object.Controller.Controller|Transform\" \"Object.Replication.ReplicatedMovement\" "
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
