--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ Plugins/*/Intermediate/*
 # Cache files for the editor to use
 DerivedDataCache/*
 TowerDefenseGame/Intermediate/ProjectFiles/UE5.vcxproj
+TowerDefenseGameV2/Intermediate/ProjectFiles/UE5.vcxproj
