--- a/TowerDefenseGameV2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TowerDefenseGameV2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -415,7 +415,7 @@ Paper2D.TimeStamp=2023.02.18-16.34.12
 Paper2D.LastCompileMethod=Unknown
 GameplayCameras.TimeStamp=2023.02.18-16.35.30
 GameplayCameras.LastCompileMethod=Unknown
-TowerDefenseGameV2.TimeStamp=2023.05.24-22.08.38
+TowerDefenseGameV2.TimeStamp=2023.05.24-23.20.43
 TowerDefenseGameV2.LastCompileMethod=Runtime
 DesktopPlatform.TimeStamp=2023.02.18-15.56.19
 DesktopPlatform.LastCompileMethod=Unknown
@@ -1166,12 +1166,17 @@ MRUItem0=/Game/Maps/Main1
 [DetailCustomWidgetExpansion]
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Blueprint/Player/Input/IA_HandleClick.IA_HandleClick,
 WidgetComponent=WidgetComponent.Physics.ConstraintsGroup,
-StaticMeshComponent=
+StaticMeshComponent=WidgetComponent.Physics.ConstraintsGroup,
 BP_TDG_SimpleTower_C=WidgetComponent.Physics.ConstraintsGroup,
-SceneComponent=WidgetComponent.Physics.ConstraintsGroup,
+SceneComponent=
 BP_TDG_PlayerController_C=WidgetComponent.Physics.ConstraintsGroup,
 K2Node_VariableGet=WidgetComponent.Physics.ConstraintsGroup,
 BP_TDG_GameModeBase_C=WidgetComponent.Physics.ConstraintsGroup,
+BP_EnemySpawner_C=WidgetComponent.Physics.ConstraintsGroup,
+BrushComponent=WidgetComponent.Physics.ConstraintsGroup,
+BP_TowerPlacementLocation_C=WidgetComponent.Physics.ConstraintsGroup,
+StaticMeshActor=WidgetComponent.Physics.ConstraintsGroup,
+NavMeshBoundsVolume=WidgetComponent.Physics.ConstraintsGroup,
 
 [EditorStartup]
 LastLevel=/Game/Maps/Main1
@@ -1679,9 +1684,98 @@ NavMeshBoundsVolume.Cooking=True
 NavMeshBoundsVolume.Replication=True
 NavMeshBoundsVolume.Networking=True
 NavMeshBoundsVolume.Actor=True
+BP_Enemy1_C.TransformCommon=True
+BP_Enemy1_C.Animation=True
+BP_Enemy1_C.Mesh=True
+BP_Enemy1_C.Tick=True
+BP_Enemy1_C.Enemy #cpp=True
+BP_Enemy1_C.ComponentTick=True
+BP_Enemy1_C.Clothing=True
+BP_Enemy1_C.Physics=True
+BP_Enemy1_C.Collision=True
+BP_Enemy1_C.LeaderPoseComponent=True
+BP_Enemy1_C.Lighting=True
+BP_Enemy1_C.AnimationRig=True
+BP_Enemy1_C.Deformer=True
+BP_Enemy1_C.SkinWeights=True
+BP_Enemy1_C.Rendering=True
+BP_Enemy1_C.HLOD=True
+BP_Enemy1_C.Mobile=True
+BP_Enemy1_C.Navigation=True
+BP_Enemy1_C.RayTracing=True
+BP_Enemy1_C.VirtualTexture=True
+BP_Enemy1_C.Tags=True
+BP_Enemy1_C.AssetUserData=True
+BP_Enemy1_C.Replication=True
+BP_Enemy1_C.ComponentReplication=True
+BP_Enemy1_C.Activation=True
+BP_Enemy1_C.Variable=True
+BP_Enemy1_C.Cooking=True
+BP_Enemy1_C.Character Movement (General Settings)=True
+BP_Enemy1_C.Character Movement: Walking=True
+BP_Enemy1_C.Character Movement: Jumping / Falling=True
+BP_Enemy1_C.Character Movement (Networking)=True
+BP_Enemy1_C.Character Movement: Swimming=True
+BP_Enemy1_C.Character Movement: Flying=True
+BP_Enemy1_C.Character Movement: Custom Movement=True
+BP_Enemy1_C.Character Movement (Rotation Settings)=True
+BP_Enemy1_C.Character Movement: Physics Interaction=True
+BP_Enemy1_C.Character Movement=True
+BP_Enemy1_C.Character Movement: Avoidance=True
+BP_Enemy1_C.RootMotion=True
+BP_Enemy1_C.Character Movement: NavMesh Movement=True
+BP_Enemy1_C.NavMovement=True
+BP_Enemy1_C.Velocity=True
+BP_Enemy1_C.PlanarMovement=True
+BP_Enemy1_C.MovementComponent=True
+BP_Enemy1_C.Shape=True
+BP_Enemy1_C.Character=True
+BP_Enemy1_C.Camera=True
+BP_Enemy1_C.Pawn=True
+BP_Enemy1_C.Actor=True
+BP_Enemy1_C.Input=True
+BP_Enemy1_C.WorldPartition=True
+BP_Enemy1_C.Events=True
+BP_EnemySpawner_C.EnemySpawner #cpp=True
+BP_EnemySpawner_C.Tick=True
+BP_EnemySpawner_C.Replication=True
+BP_EnemySpawner_C.Rendering=True
+BP_EnemySpawner_C.Collision=True
+BP_EnemySpawner_C.Actor=True
+BP_EnemySpawner_C.Input=True
+BP_EnemySpawner_C.HLOD=True
+BP_EnemySpawner_C.Physics=True
+BP_EnemySpawner_C.WorldPartition=True
+BP_EnemySpawner_C.Events=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.ComponentTick=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.LeaderPoseComponent=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.AnimationRig=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Deformer=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.HLOD=True
+SkeletalMeshComponent.SkinWeights=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.Navigation=True
+SkeletalMeshComponent.VirtualTexture=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
+SkeletalMeshComponent.Materials=True
+BP_EnemySpawner_C.TransformCommon=True
+BP_EnemySpawner_C.Networking=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Blueprint/Player/BP_PlayerCameraPawn.BP_PlayerCameraPawn
 OpenAssetsAtExit=/Game/Blueprint/Towers/BP_TowerPlacementLocation.BP_TowerPlacementLocation
@@ -1690,13 +1784,15 @@ OpenAssetsAtExit=/Game/Blueprint/Towers/UBP_SimpleTower_Health.UBP_SimpleTower_H
 OpenAssetsAtExit=/Game/Blueprint/Towers/BP_TDG_TowerProjectile.BP_TDG_TowerProjectile
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprint/Towers/BP_TDG_TowerProjectile
-MRUItem1=/Game/Blueprint/Towers/UBP_SimpleTower_Health
-MRUItem2=/Game/Blueprint/Towers/BP_TDG_SimpleTower
-MRUItem3=/Game/Blueprint/Towers/BP_TowerPlacementLocation
-MRUItem4=/Game/Blueprint/Player/BP_PlayerCameraPawn
-MRUItem5=/Game/Blueprint/BP_TowerPlacementLocation
-MRUItem6=/Game/Blueprint/Player/Input/IMC_Default
+MRUItem0=/Game/Blueprint/Enemies/BP_EnemySpawner
+MRUItem1=/Game/Blueprint/Enemies/BP_Enemy1
+MRUItem2=/Game/Blueprint/Towers/BP_TDG_TowerProjectile
+MRUItem3=/Game/Blueprint/Towers/UBP_SimpleTower_Health
+MRUItem4=/Game/Blueprint/Towers/BP_TDG_SimpleTower
+MRUItem5=/Game/Blueprint/Towers/BP_TowerPlacementLocation
+MRUItem6=/Game/Blueprint/Player/BP_PlayerCameraPawn
+MRUItem7=/Game/Blueprint/BP_TowerPlacementLocation
+MRUItem8=/Game/Blueprint/Player/Input/IMC_Default
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprint/Player/Input/IMC_Default.IMC_Default=0
@@ -1728,6 +1824,8 @@ ActorComponent=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+BP_EnemySpawner_C=
+EnemySpawner=
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1791,7 +1889,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Classes_Game/TowerDefenseGameV2/Enemies
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprint/Enemies
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1811,7 +1909,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Blueprint/Towers
+ContentBrowserTab1.SelectedPaths=/Game/Blueprint/Enemies
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -1820,6 +1918,7 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprint/Enemies/BP_EnemySpawner.BP_EnemySpawner;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/Blueprint/Towers/BP_TDG_SimpleTower.BP_TDG_SimpleTower;
 RecentlyPlaced=/Game/Blueprint/Towers/BP_TowerPlacementLocation.BP_TowerPlacementLocation;
