--- a/TowerDefenseGameV2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TowerDefenseGameV2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -156,7 +156,7 @@ GridEnabled=False
 LastLevel=/Game/Maps/Main1
 
 [ModuleFileTracking]
-TowerDefenseGameV2.TimeStamp=2023.05.24-23.38.21
+TowerDefenseGameV2.TimeStamp=2023.05.26-14.18.03
 TowerDefenseGameV2.LastCompileMethod=External
 StorageServerClient.TimeStamp=2023.02.18-15.57.57
 StorageServerClient.LastCompileMethod=Unknown
@@ -1156,9 +1156,11 @@ Voice.TimeStamp=2023.02.18-15.58.17
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2023.02.18-15.57.14
 MovieSceneCapture.LastCompileMethod=Unknown
+NullDrv.TimeStamp=2023.02.18-15.57.20
+NullDrv.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Blueprint/Enemies/UBP_Enemy1_Health.UBP_Enemy1_Health
 OpenAssetsAtExit=/Game/Blueprint/Enemies/BP_Enemy1.BP_Enemy1
