--- a/TowerDefenseGameV2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TowerDefenseGameV2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -156,8 +156,8 @@ GridEnabled=False
 LastLevel=/Game/Maps/Main1
 
 [ModuleFileTracking]
-TowerDefenseGameV2.TimeStamp=2023.05.26-16.17.46
-TowerDefenseGameV2.LastCompileMethod=External
+TowerDefenseGameV2.TimeStamp=2023.05.26-23.46.52
+TowerDefenseGameV2.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2023.02.18-15.57.57
 StorageServerClient.LastCompileMethod=Unknown
 CookOnTheFly.TimeStamp=2023.02.18-15.56.05
@@ -1164,9 +1164,7 @@ ExternalImagePicker.LastCompileMethod=Unknown
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Blueprint/Enemies/UBP_Enemy1_Health.UBP_Enemy1_Health
 OpenAssetsAtExit=/Game/Blueprint/Enemies/BP_Enemy1.BP_Enemy1
-OpenAssetsAtExit=/Game/Blueprint/Towers/BP_TDG_SimpleTower.BP_TDG_SimpleTower
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1231,8 +1229,8 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprint/Towers/BP_TDG_SimpleTower
-MRUItem1=/Game/Blueprint/Enemies/BP_Enemy1
+MRUItem0=/Game/Blueprint/Enemies/BP_Enemy1
+MRUItem1=/Game/Blueprint/Towers/BP_TDG_SimpleTower
 MRUItem2=/Game/Blueprint/Enemies/UBP_Enemy1_Health
 
 [UMGSequencerSettings SequencerSettings]
@@ -1308,8 +1306,8 @@ Enemy1="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Charact
 BasicEnemy="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 Character="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-CapsuleComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+CapsuleComponent=
+ShapeComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
@@ -2013,6 +2011,19 @@ MeshComponent.Tags=True
 MeshComponent.ComponentReplication=True
 MeshComponent.Variable=True
 MeshComponent.Cooking=True
+BP_Enemy1_C.Networking=True
+BP_TDG_SimpleTower_C.TransformCommon=True
+BP_TDG_SimpleTower_C.Networking=True
+BP_TowerPlacementLocation_C.TransformCommon=True
+BP_TowerPlacementLocation_C.Tower placement #cpp=True
+BP_TowerPlacementLocation_C.Rendering=True
+BP_TowerPlacementLocation_C.Replication=True
+BP_TowerPlacementLocation_C.Collision=True
+BP_TowerPlacementLocation_C.HLOD=True
+BP_TowerPlacementLocation_C.Physics=True
+BP_TowerPlacementLocation_C.Networking=True
+BP_TowerPlacementLocation_C.Input=True
+BP_TowerPlacementLocation_C.Actor=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -2049,7 +2060,7 @@ BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
 bFavorPureCastNodes=False
-SaveOnCompile=SoC_Never
+SaveOnCompile=SoC_SuccessOnly
 bJumpToNodeErrors=False
 bAllowExplicitImpureNodeDisabling=False
 bShowActionMenuItemSignatures=False
@@ -2083,11 +2094,22 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 
 [DetailCustomWidgetExpansion]
-BP_Enemy1_C=BP_Enemy1_C.Collision.Collision,
-SkeletalMeshComponent=
-CapsuleComponent=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,
+BP_Enemy1_C=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,
+SkeletalMeshComponent=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,
+CapsuleComponent=
 WidgetComponent=WidgetComponent.Collision.Collision,
+StaticMeshComponent=
+AIController=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,
+SceneComponent=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,
+BP_TowerPlacementLocation_C=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,
 
 [DetailCategoriesAdvanced]
 CanvasPanel.Behavior=False
+
+[/Script/LiveCoding.LiveCodingSettings]
+bEnabled=False
+bPreloadEngineModules=False
+bPreloadEnginePluginModules=False
+bPreloadProjectModules=True
+bPreloadProjectPluginModules=True
 
