--- a/TowerDefenseGameV2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TowerDefenseGameV2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -157,8 +157,8 @@ CurrentScalingGridSize=5
 LastLevel=/Game/Maps/Main1
 
 [ModuleFileTracking]
-TowerDefenseGameV2.TimeStamp=2023.05.27-22.30.02
-TowerDefenseGameV2.LastCompileMethod=External
+TowerDefenseGameV2.TimeStamp=2023.05.28-23.20.38
+TowerDefenseGameV2.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2023.02.18-15.57.57
 StorageServerClient.LastCompileMethod=Unknown
 CookOnTheFly.TimeStamp=2023.02.18-15.56.05
@@ -1244,12 +1244,12 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Megascans/Surfaces/Roman_Stone_Corinthian_Capital_tfioeb0r/MI_Roman_Stone_Corinthian_Capital_tfioeb0r_2K
-MRUItem1=/Game/Blueprint/Towers/BP_TDG_MainTower
-MRUItem2=/Game/Blueprint/Towers/BP_TowerPlacementLocation
-MRUItem3=/Game/Blueprint/Towers/BP_TDG_SimpleTower
-MRUItem4=/Game/Blueprint/Towers/BP_TDG_TowerProjectile
-MRUItem5=/Game/Blueprint/Enemies/BP_Enemy1
+MRUItem0=/Game/Blueprint/Towers/BP_TDG_MainTower
+MRUItem1=/Game/Blueprint/Towers/BP_TowerPlacementLocation
+MRUItem2=/Game/Blueprint/Towers/BP_TDG_SimpleTower
+MRUItem3=/Game/Blueprint/Towers/BP_TDG_TowerProjectile
+MRUItem4=/Game/Blueprint/Enemies/BP_Enemy1
+MRUItem5=/Game/Megascans/Surfaces/Roman_Stone_Corinthian_Capital_tfioeb0r/MI_Roman_Stone_Corinthian_Capital_tfioeb0r_2K
 MRUItem6=/Game/Blueprint/Enemies/ABP_Enemy1
 MRUItem7=/Game/Blueprint/Player/BP_PlayerCameraPawn
 MRUItem8=/Game/Blueprint/Enemies/UBP_Enemy1_Health
@@ -2383,13 +2383,13 @@ BP_Enemy1_C=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision
 SkeletalMeshComponent=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,WidgetComponent.Collision.Collision,
 CapsuleComponent=
 WidgetComponent=WidgetComponent.Collision.Collision,BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,
-StaticMeshComponent=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,
+StaticMeshComponent=
 AIController=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,
 SceneComponent=
-BP_TowerPlacementLocation_C=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,
+BP_TowerPlacementLocation_C=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,WidgetComponent.Collision.Collision,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 BP_EnemySpawner_C=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,
-BrushComponent=
+BrushComponent=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,WidgetComponent.Collision.Collision,
 BoxComponent=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,WidgetComponent.Collision.Collision,
 NavMeshBoundsVolume=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,WidgetComponent.Collision.Collision,
 PlayerStart=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,
@@ -2679,8 +2679,8 @@ PreserveScaleRatio=True
 ColorViewMode=Normal
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprint/Towers/BP_TDG_MainTower.BP_TDG_MainTower;
 RecentlyPlaced=/Game/Blueprint/Towers/BP_TowerPlacementLocation.BP_TowerPlacementLocation;
+RecentlyPlaced=/Game/Blueprint/Towers/BP_TDG_MainTower.BP_TDG_MainTower;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 
 [MaterialInstanceEditor]
