--- a/TowerDefenseGameV2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TowerDefenseGameV2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -157,8 +157,8 @@ CurrentScalingGridSize=5
 LastLevel=/Game/Maps/Main1
 
 [ModuleFileTracking]
-TowerDefenseGameV2.TimeStamp=2023.05.28-23.20.38
-TowerDefenseGameV2.LastCompileMethod=Runtime
+TowerDefenseGameV2.TimeStamp=2023.05.29-23.07.41
+TowerDefenseGameV2.LastCompileMethod=External
 StorageServerClient.TimeStamp=2023.02.18-15.57.57
 StorageServerClient.LastCompileMethod=Unknown
 CookOnTheFly.TimeStamp=2023.02.18-15.56.05
@@ -1176,10 +1176,8 @@ WebBrowser.LastCompileMethod=Unknown
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Blueprint/Enemies/BP_Enemy1.BP_Enemy1
-OpenAssetsAtExit=/Game/Blueprint/Towers/BP_TDG_TowerProjectile.BP_TDG_TowerProjectile
-OpenAssetsAtExit=/Game/Blueprint/Towers/BP_TDG_SimpleTower.BP_TDG_SimpleTower
-OpenAssetsAtExit=/Game/Blueprint/Towers/BP_TowerPlacementLocation.BP_TowerPlacementLocation
-OpenAssetsAtExit=/Game/Blueprint/Towers/BP_TDG_MainTower.BP_TDG_MainTower
+OpenAssetsAtExit=/Game/Blueprint/Player/BP_PlayerCameraPawn.BP_PlayerCameraPawn
+OpenAssetsAtExit=/Game/Blueprint/Player/UBP_Hud.UBP_Hud
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1244,17 +1242,18 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprint/Towers/BP_TDG_MainTower
-MRUItem1=/Game/Blueprint/Towers/BP_TowerPlacementLocation
-MRUItem2=/Game/Blueprint/Towers/BP_TDG_SimpleTower
-MRUItem3=/Game/Blueprint/Towers/BP_TDG_TowerProjectile
-MRUItem4=/Game/Blueprint/Enemies/BP_Enemy1
-MRUItem5=/Game/Megascans/Surfaces/Roman_Stone_Corinthian_Capital_tfioeb0r/MI_Roman_Stone_Corinthian_Capital_tfioeb0r_2K
-MRUItem6=/Game/Blueprint/Enemies/ABP_Enemy1
-MRUItem7=/Game/Blueprint/Player/BP_PlayerCameraPawn
-MRUItem8=/Game/Blueprint/Enemies/UBP_Enemy1_Health
-MRUItem9=/Game/Blueprint/Towers/UBP_SimpleTower_Health
-MRUItem10=/Game/Blueprint/Enemies/Anims/Slow_Run_anim
+MRUItem0=/Game/Blueprint/Player/UBP_Hud
+MRUItem1=/Game/Blueprint/Player/BP_PlayerCameraPawn
+MRUItem2=/Game/Blueprint/Enemies/BP_Enemy1
+MRUItem3=/Game/Blueprint/Towers/BP_TDG_MainTower
+MRUItem4=/Game/Blueprint/Towers/BP_TowerPlacementLocation
+MRUItem5=/Game/Blueprint/Towers/BP_TDG_SimpleTower
+MRUItem6=/Game/Blueprint/Towers/BP_TDG_TowerProjectile
+MRUItem7=/Game/Megascans/Surfaces/Roman_Stone_Corinthian_Capital_tfioeb0r/MI_Roman_Stone_Corinthian_Capital_tfioeb0r_2K
+MRUItem8=/Game/Blueprint/Enemies/ABP_Enemy1
+MRUItem9=/Game/Blueprint/Enemies/UBP_Enemy1_Health
+MRUItem10=/Game/Blueprint/Towers/UBP_SimpleTower_Health
+MRUItem11=/Game/Blueprint/Enemies/Anims/Slow_Run_anim
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -1328,7 +1327,7 @@ BP_Enemy1_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Ch
 Enemy1="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 BasicEnemy="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 Character="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Pawn=
 CapsuleComponent=
 ShapeComponent=
 PrimitiveComponent=
@@ -2301,6 +2300,22 @@ CharacterMovementComponent.ComponentReplication=True
 CharacterMovementComponent.Activation=True
 CharacterMovementComponent.Cooking=True
 CharacterMovementComponent.Events=True
+UBP_Hud_C.Appearance=True
+UBP_Hud_C.Designer=True
+UBP_Hud_C.Input=True
+UBP_Hud_C.Interaction=True
+UBP_Hud_C.Performance=True
+UBP_Hud_C.Layout=True
+UBP_Hud_C.Behavior=True
+UBP_Hud_C.Render Transform=True
+UBP_Hud_C.Localization=True
+UBP_Hud_C.Accessibility=True
+UBP_Hud_C.Clipping=True
+UBP_Hud_C.Navigation=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+UBP_Hud_C.Default=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -2319,6 +2334,7 @@ CollisionProfile=True
 /Game/Blueprint/Towers/BP_TDG_TowerProjectile.BP_TDG_TowerProjectile=0
 /Game/Megascans/Surfaces/Roman_Stone_Corinthian_Capital_tfioeb0r/MI_Roman_Stone_Corinthian_Capital_tfioeb0r_2K.MI_Roman_Stone_Corinthian_Capital_tfioeb0r_2K=0
 /Game/Blueprint/Towers/BP_TDG_MainTower.BP_TDG_MainTower=0
+/Game/Blueprint/Player/UBP_Hud.UBP_Hud=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2380,7 +2396,7 @@ bDeleteSourceFilesWithAssets=False
 
 [DetailCustomWidgetExpansion]
 BP_Enemy1_C=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,WidgetComponent.Collision.Collision,
-SkeletalMeshComponent=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,WidgetComponent.Collision.Collision,
+SkeletalMeshComponent=
 CapsuleComponent=
 WidgetComponent=WidgetComponent.Collision.Collision,BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,
 StaticMeshComponent=
@@ -2629,7 +2645,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
