--- a/TowerDefenseGameV2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TowerDefenseGameV2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -157,8 +157,8 @@ CurrentScalingGridSize=5
 LastLevel=/Game/Maps/Main1
 
 [ModuleFileTracking]
-TowerDefenseGameV2.TimeStamp=2023.05.29-23.07.41
-TowerDefenseGameV2.LastCompileMethod=External
+TowerDefenseGameV2.TimeStamp=2023.05.30-22.52.01
+TowerDefenseGameV2.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2023.02.18-15.57.57
 StorageServerClient.LastCompileMethod=Unknown
 CookOnTheFly.TimeStamp=2023.02.18-15.56.05
@@ -1178,6 +1178,7 @@ SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Blueprint/Enemies/BP_Enemy1.BP_Enemy1
 OpenAssetsAtExit=/Game/Blueprint/Player/BP_PlayerCameraPawn.BP_PlayerCameraPawn
 OpenAssetsAtExit=/Game/Blueprint/Player/UBP_Hud.UBP_Hud
+OpenAssetsAtExit=/Game/Blueprint/Enemies/UBP_Enemy1_Health.UBP_Enemy1_Health
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1242,16 +1243,16 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprint/Player/UBP_Hud
-MRUItem1=/Game/Blueprint/Player/BP_PlayerCameraPawn
-MRUItem2=/Game/Blueprint/Enemies/BP_Enemy1
-MRUItem3=/Game/Blueprint/Towers/BP_TDG_MainTower
-MRUItem4=/Game/Blueprint/Towers/BP_TowerPlacementLocation
-MRUItem5=/Game/Blueprint/Towers/BP_TDG_SimpleTower
-MRUItem6=/Game/Blueprint/Towers/BP_TDG_TowerProjectile
-MRUItem7=/Game/Megascans/Surfaces/Roman_Stone_Corinthian_Capital_tfioeb0r/MI_Roman_Stone_Corinthian_Capital_tfioeb0r_2K
-MRUItem8=/Game/Blueprint/Enemies/ABP_Enemy1
-MRUItem9=/Game/Blueprint/Enemies/UBP_Enemy1_Health
+MRUItem0=/Game/Blueprint/Enemies/UBP_Enemy1_Health
+MRUItem1=/Game/Blueprint/Player/UBP_Hud
+MRUItem2=/Game/Blueprint/Player/BP_PlayerCameraPawn
+MRUItem3=/Game/Blueprint/Enemies/BP_Enemy1
+MRUItem4=/Game/Blueprint/Towers/BP_TDG_MainTower
+MRUItem5=/Game/Blueprint/Towers/BP_TowerPlacementLocation
+MRUItem6=/Game/Blueprint/Towers/BP_TDG_SimpleTower
+MRUItem7=/Game/Blueprint/Towers/BP_TDG_TowerProjectile
+MRUItem8=/Game/Megascans/Surfaces/Roman_Stone_Corinthian_Capital_tfioeb0r/MI_Roman_Stone_Corinthian_Capital_tfioeb0r_2K
+MRUItem9=/Game/Blueprint/Enemies/ABP_Enemy1
 MRUItem10=/Game/Blueprint/Towers/UBP_SimpleTower_Health
 MRUItem11=/Game/Blueprint/Enemies/Anims/Slow_Run_anim
 
@@ -1330,15 +1331,19 @@ Character="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Char
 Pawn=
 CapsuleComponent=
 ShapeComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+PrimitiveComponent="\"Object.UserInterface.DrawSize\" \"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.UserInterface.DrawSize\" \"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.UserInterface.DrawSize\" \"Object.Collision.BodyInstance\" "
 WidgetComponent="\"Object.UserInterface.DrawSize\" \"Object.Collision.BodyInstance\" "
-MeshComponent=
+MeshComponent="\"Object.UserInterface.DrawSize\" \"Object.Collision.BodyInstance\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 StaticMeshComponent=
 BoxComponent=
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
+Widget=
+Visual=
 
 [DetailCategories]
 EditorStyleSettings.Theme=True
@@ -2316,6 +2321,38 @@ EdGraph.Graph=True
 EdGraph.Inputs=True
 EdGraph.Outputs=True
 UBP_Hud_C.Default=True
+UBP_Enemy1_Health_C.Appearance=True
+UBP_Enemy1_Health_C.Designer=True
+UBP_Enemy1_Health_C.Input=True
+UBP_Enemy1_Health_C.Interaction=True
+UBP_Enemy1_Health_C.Performance=True
+UBP_Enemy1_Health_C.Layout=True
+UBP_Enemy1_Health_C.Behavior=True
+UBP_Enemy1_Health_C.Render Transform=True
+UBP_Enemy1_Health_C.Localization=True
+UBP_Enemy1_Health_C.Accessibility=True
+UBP_Enemy1_Health_C.Clipping=True
+UBP_Enemy1_Health_C.Navigation=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+HUD.HUD=True
+HUD.Collision=True
+HUD.HLOD=True
+HUD.Physics=True
+HUD.Networking=True
+AIController.TransformCommon=True
+AIController.AI=True
+AIController.Replication=True
+AIController.HLOD=True
+AIController.Physics=True
+AIController.Networking=True
+AIController.Input=True
+AIController.Actor=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -2396,12 +2433,12 @@ bDeleteSourceFilesWithAssets=False
 
 [DetailCustomWidgetExpansion]
 BP_Enemy1_C=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,WidgetComponent.Collision.Collision,
-SkeletalMeshComponent=
+SkeletalMeshComponent=WidgetComponent.Collision.Collision,BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,
 CapsuleComponent=
 WidgetComponent=WidgetComponent.Collision.Collision,BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,
 StaticMeshComponent=
 AIController=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,
-SceneComponent=
+SceneComponent=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,WidgetComponent.Collision.Collision,
 BP_TowerPlacementLocation_C=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,WidgetComponent.Collision.Collision,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 BP_EnemySpawner_C=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,
@@ -2418,6 +2455,7 @@ CharacterMovementComponent=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Coll
 
 [DetailCategoriesAdvanced]
 CanvasPanel.Behavior=False
+WidgetComponent.UserInterface=False
 
 [/Script/LiveCoding.LiveCodingSettings]
 bEnabled=False
