--- a/TowerDefenseGameV2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TowerDefenseGameV2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -157,7 +157,7 @@ CurrentScalingGridSize=5
 LastLevel=/Game/Maps/Main1
 
 [ModuleFileTracking]
-TowerDefenseGameV2.TimeStamp=2023.05.30-22.52.01
+TowerDefenseGameV2.TimeStamp=2023.05.30-23.25.36
 TowerDefenseGameV2.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2023.02.18-15.57.57
 StorageServerClient.LastCompileMethod=Unknown
@@ -1179,6 +1179,7 @@ OpenAssetsAtExit=/Game/Blueprint/Enemies/BP_Enemy1.BP_Enemy1
 OpenAssetsAtExit=/Game/Blueprint/Player/BP_PlayerCameraPawn.BP_PlayerCameraPawn
 OpenAssetsAtExit=/Game/Blueprint/Player/UBP_Hud.UBP_Hud
 OpenAssetsAtExit=/Game/Blueprint/Enemies/UBP_Enemy1_Health.UBP_Enemy1_Health
+OpenAssetsAtExit=/Game/Blueprint/Player/UBP_StartGame.UBP_StartGame
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1232,6 +1233,7 @@ Special Effects=False
 Synth=False
 User Created=False
 Advanced=False
+Common=False
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1243,18 +1245,19 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprint/Enemies/UBP_Enemy1_Health
-MRUItem1=/Game/Blueprint/Player/UBP_Hud
-MRUItem2=/Game/Blueprint/Player/BP_PlayerCameraPawn
-MRUItem3=/Game/Blueprint/Enemies/BP_Enemy1
-MRUItem4=/Game/Blueprint/Towers/BP_TDG_MainTower
-MRUItem5=/Game/Blueprint/Towers/BP_TowerPlacementLocation
-MRUItem6=/Game/Blueprint/Towers/BP_TDG_SimpleTower
-MRUItem7=/Game/Blueprint/Towers/BP_TDG_TowerProjectile
-MRUItem8=/Game/Megascans/Surfaces/Roman_Stone_Corinthian_Capital_tfioeb0r/MI_Roman_Stone_Corinthian_Capital_tfioeb0r_2K
-MRUItem9=/Game/Blueprint/Enemies/ABP_Enemy1
-MRUItem10=/Game/Blueprint/Towers/UBP_SimpleTower_Health
-MRUItem11=/Game/Blueprint/Enemies/Anims/Slow_Run_anim
+MRUItem0=/Game/Blueprint/Player/UBP_StartGame
+MRUItem1=/Game/Blueprint/Enemies/UBP_Enemy1_Health
+MRUItem2=/Game/Blueprint/Player/UBP_Hud
+MRUItem3=/Game/Blueprint/Player/BP_PlayerCameraPawn
+MRUItem4=/Game/Blueprint/Enemies/BP_Enemy1
+MRUItem5=/Game/Blueprint/Towers/BP_TDG_MainTower
+MRUItem6=/Game/Blueprint/Towers/BP_TowerPlacementLocation
+MRUItem7=/Game/Blueprint/Towers/BP_TDG_SimpleTower
+MRUItem8=/Game/Blueprint/Towers/BP_TDG_TowerProjectile
+MRUItem9=/Game/Megascans/Surfaces/Roman_Stone_Corinthian_Capital_tfioeb0r/MI_Roman_Stone_Corinthian_Capital_tfioeb0r_2K
+MRUItem10=/Game/Blueprint/Enemies/ABP_Enemy1
+MRUItem11=/Game/Blueprint/Towers/UBP_SimpleTower_Health
+MRUItem12=/Game/Blueprint/Enemies/Anims/Slow_Run_anim
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -1331,11 +1334,11 @@ Character="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Char
 Pawn=
 CapsuleComponent=
 ShapeComponent=
-PrimitiveComponent="\"Object.UserInterface.DrawSize\" \"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.UserInterface.DrawSize\" \"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.UserInterface.DrawSize\" \"Object.Collision.BodyInstance\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 WidgetComponent="\"Object.UserInterface.DrawSize\" \"Object.Collision.BodyInstance\" "
-MeshComponent="\"Object.UserInterface.DrawSize\" \"Object.Collision.BodyInstance\" "
+MeshComponent=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 StaticMeshComponent=
@@ -2353,6 +2356,40 @@ AIController.Physics=True
 AIController.Networking=True
 AIController.Input=True
 AIController.Actor=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+UBP_StartGame_C.Appearance=True
+UBP_StartGame_C.Designer=True
+UBP_StartGame_C.Input=True
+UBP_StartGame_C.Interaction=True
+UBP_StartGame_C.Performance=True
+UBP_StartGame_C.Layout=True
+UBP_StartGame_C.Behavior=True
+UBP_StartGame_C.Render Transform=True
+UBP_StartGame_C.Localization=True
+UBP_StartGame_C.Accessibility=True
+UBP_StartGame_C.Clipping=True
+UBP_StartGame_C.Navigation=True
+PropertyWrapper.Events=True
+BackgroundBlur.Layout=True
+BackgroundBlur.Content=True
+BackgroundBlur.Appearance=True
+BackgroundBlur.Accessibility=True
+BackgroundBlur.Behavior=True
+BackgroundBlur.Render Transform=True
+BackgroundBlur.Performance=True
+BackgroundBlur.Clipping=True
+BackgroundBlur.Navigation=True
+BackgroundBlur.Localization=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -2372,6 +2409,7 @@ CollisionProfile=True
 /Game/Megascans/Surfaces/Roman_Stone_Corinthian_Capital_tfioeb0r/MI_Roman_Stone_Corinthian_Capital_tfioeb0r_2K.MI_Roman_Stone_Corinthian_Capital_tfioeb0r_2K=0
 /Game/Blueprint/Towers/BP_TDG_MainTower.BP_TDG_MainTower=0
 /Game/Blueprint/Player/UBP_Hud.UBP_Hud=0
+/Game/Blueprint/Player/UBP_StartGame.UBP_StartGame=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2433,7 +2471,7 @@ bDeleteSourceFilesWithAssets=False
 
 [DetailCustomWidgetExpansion]
 BP_Enemy1_C=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,WidgetComponent.Collision.Collision,
-SkeletalMeshComponent=WidgetComponent.Collision.Collision,BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,
+SkeletalMeshComponent=
 CapsuleComponent=
 WidgetComponent=WidgetComponent.Collision.Collision,BP_Enemy1_C.Collision.Collision,CapsuleComponent.Collision.Collision,
 StaticMeshComponent=
@@ -2456,6 +2494,7 @@ CharacterMovementComponent=BP_Enemy1_C.Collision.Collision,CapsuleComponent.Coll
 [DetailCategoriesAdvanced]
 CanvasPanel.Behavior=False
 WidgetComponent.UserInterface=False
+K2Node_VariableSet.Variable=False
 
 [/Script/LiveCoding.LiveCodingSettings]
 bEnabled=False
