--- a/TowerDefenseGameV2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TowerDefenseGameV2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -157,7 +157,7 @@ CurrentScalingGridSize=5
 LastLevel=/Game/Maps/Main1
 
 [ModuleFileTracking]
-TowerDefenseGameV2.TimeStamp=2023.05.30-23.25.36
+TowerDefenseGameV2.TimeStamp=2023.05.31-23.27.13
 TowerDefenseGameV2.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2023.02.18-15.57.57
 StorageServerClient.LastCompileMethod=Unknown
@@ -1180,6 +1180,8 @@ OpenAssetsAtExit=/Game/Blueprint/Player/BP_PlayerCameraPawn.BP_PlayerCameraPawn
 OpenAssetsAtExit=/Game/Blueprint/Player/UBP_Hud.UBP_Hud
 OpenAssetsAtExit=/Game/Blueprint/Enemies/UBP_Enemy1_Health.UBP_Enemy1_Health
 OpenAssetsAtExit=/Game/Blueprint/Player/UBP_StartGame.UBP_StartGame
+OpenAssetsAtExit=/Game/Blueprint/Towers/BP_TowerPlacementLocation.BP_TowerPlacementLocation
+OpenAssetsAtExit=/Game/Blueprint/Towers/UBP_TowerChoose.UBP_TowerChoose
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1245,19 +1247,20 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprint/Player/UBP_StartGame
-MRUItem1=/Game/Blueprint/Enemies/UBP_Enemy1_Health
-MRUItem2=/Game/Blueprint/Player/UBP_Hud
-MRUItem3=/Game/Blueprint/Player/BP_PlayerCameraPawn
-MRUItem4=/Game/Blueprint/Enemies/BP_Enemy1
-MRUItem5=/Game/Blueprint/Towers/BP_TDG_MainTower
-MRUItem6=/Game/Blueprint/Towers/BP_TowerPlacementLocation
-MRUItem7=/Game/Blueprint/Towers/BP_TDG_SimpleTower
-MRUItem8=/Game/Blueprint/Towers/BP_TDG_TowerProjectile
-MRUItem9=/Game/Megascans/Surfaces/Roman_Stone_Corinthian_Capital_tfioeb0r/MI_Roman_Stone_Corinthian_Capital_tfioeb0r_2K
-MRUItem10=/Game/Blueprint/Enemies/ABP_Enemy1
-MRUItem11=/Game/Blueprint/Towers/UBP_SimpleTower_Health
-MRUItem12=/Game/Blueprint/Enemies/Anims/Slow_Run_anim
+MRUItem0=/Game/Blueprint/Towers/UBP_TowerChoose
+MRUItem1=/Game/Blueprint/Towers/BP_TowerPlacementLocation
+MRUItem2=/Game/Blueprint/Player/UBP_StartGame
+MRUItem3=/Game/Blueprint/Enemies/UBP_Enemy1_Health
+MRUItem4=/Game/Blueprint/Player/UBP_Hud
+MRUItem5=/Game/Blueprint/Player/BP_PlayerCameraPawn
+MRUItem6=/Game/Blueprint/Enemies/BP_Enemy1
+MRUItem7=/Game/Blueprint/Towers/BP_TDG_MainTower
+MRUItem8=/Game/Blueprint/Towers/BP_TDG_SimpleTower
+MRUItem9=/Game/Blueprint/Towers/BP_TDG_TowerProjectile
+MRUItem10=/Game/Megascans/Surfaces/Roman_Stone_Corinthian_Capital_tfioeb0r/MI_Roman_Stone_Corinthian_Capital_tfioeb0r_2K
+MRUItem11=/Game/Blueprint/Enemies/ABP_Enemy1
+MRUItem12=/Game/Blueprint/Towers/UBP_SimpleTower_Health
+MRUItem13=/Game/Blueprint/Enemies/Anims/Slow_Run_anim
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -2390,6 +2393,19 @@ BackgroundBlur.Performance=True
 BackgroundBlur.Clipping=True
 BackgroundBlur.Navigation=True
 BackgroundBlur.Localization=True
+UBP_TowerChoose_C.Appearance=True
+UBP_TowerChoose_C.Designer=True
+UBP_TowerChoose_C.Input=True
+UBP_TowerChoose_C.Interaction=True
+UBP_TowerChoose_C.Performance=True
+UBP_TowerChoose_C.Layout=True
+UBP_TowerChoose_C.Behavior=True
+UBP_TowerChoose_C.Render Transform=True
+UBP_TowerChoose_C.Localization=True
+UBP_TowerChoose_C.Accessibility=True
+UBP_TowerChoose_C.Clipping=True
+UBP_TowerChoose_C.Navigation=True
+K2Node_VariableGet.Events=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -2410,6 +2426,7 @@ CollisionProfile=True
 /Game/Blueprint/Towers/BP_TDG_MainTower.BP_TDG_MainTower=0
 /Game/Blueprint/Player/UBP_Hud.UBP_Hud=0
 /Game/Blueprint/Player/UBP_StartGame.UBP_StartGame=0
+/Game/Blueprint/Towers/UBP_TowerChoose.UBP_TowerChoose=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
